@@ -1,7 +1,29 @@
+FROM openjdk:17-ea-14-jdk AS TEMP_BUILD_IMAGE
+
+ENV APP_HOME=/usr/app/
+
+WORKDIR $APP_HOME
+
+COPY build.gradle settings.gradle gradlew $APP_HOME
+
+COPY gradle $APP_HOME/gradle
+
+RUN ./gradlew build || return 0 
+
+COPY . .
+
+RUN ./gradlew build
+
 FROM openjdk:17-ea-14-jdk
 
-WORKDIR /app
+ENV ARTIFACT_NAME=excel-parser.jar
 
-COPY build/libs/excel-parser.jar excel-parser.jar
+ENV APP_HOME=/usr/app/
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:MaxRAMFraction=2", "-jar", "excel-parser.jar"]
+WORKDIR $APP_HOME
+
+COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/$ARTIFACT_NAME .
+
+EXPOSE 8080
+
+CMD ["java", "-jar", $ARTIFACT_NAME]
